--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "browserify test/*.js | testling"
+    "test": "browserify test/*.js | testling -x chromium"
   },
   "dependencies": {
     "keycode": "^0.3.0",
