--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "browserify test/*.js | testling -x chromium"
   },
   "dependencies": {
+    "global": "^4.3.0",
     "keycode": "^2.0.0",
     "lodash.assign": "^3.0.0",
     "lodash.isstring": "^3.0.0"
