--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@kenan/eslint-config": "^5.0.0",
+    "@kenan/renovate-config": "1.1.1",
     "browserify": "^16.1.0",
     "eslint": "^4.4.1",
     "tape": "^4.0.0",
