--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "lodash.isstring": "^4.0.1"
   },
   "devDependencies": {
-    "@kenan/eslint-config": "^5.0.0",
+    "@kenan/eslint-config": "5.0.0",
     "@kenan/renovate-config": "1.1.1",
-    "browserify": "^16.1.0",
-    "eslint": "^4.4.1",
-    "tape": "^4.0.0",
-    "tape-run": "^3.0.0"
+    "browserify": "16.3.0",
+    "eslint": "4.19.1",
+    "tape": "4.11.0",
+    "tape-run": "3.0.4"
   }
 }
