--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "test": "test"
   },
   "scripts": {
-    "pretest": "eslint *.js test/*.js",
-    "test": "browserify test/*.js | tape-run"
+    "lint": "eslint *.js test/*.js",
+    "test": "browserify test/*.js | tape-run",
+    "posttest": "npm run lint"
   },
   "dependencies": {
     "global": "^4.3.0",
@@ -30,10 +31,10 @@
     "lodash.isstring": "^4.0.1"
   },
   "devDependencies": {
-    "@kenan/eslint-config": "6.0.0",
+    "@kenan/eslint-config": "7.0.0",
     "@kenan/renovate-config": "1.1.1",
     "browserify": "16.3.0",
-    "eslint": "5.16.0",
+    "eslint": "6.3.0",
     "tape": "4.11.0",
     "tape-run": "6.0.0"
   }
