--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "lodash.isstring": "^4.0.1"
   },
   "devDependencies": {
-    "@kenan/eslint-config": "7.0.0",
+    "@kenan/eslint-config": "^8.0.0",
     "@kenan/renovate-config": "1.1.1",
     "browserify": "16.5.1",
-    "eslint": "6.8.0",
+    "eslint": "^7.6.0",
     "tape": "5.0.1",
     "tape-run": "7.0.0"
   }
