chore(deps): tape-run@^8.0.0
Closes https://github.com/KenanY/create-event/pull/66

--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "browserify": "16.5.1",
     "eslint": "^7.6.0",
     "tape": "5.0.1",
-    "tape-run": "7.0.0"
+    "tape-run": "^8.0.0"
   }
 }
