--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "lint": "eslint *.js test/*.js",
     "test": "browserify test/*.js | tape-run",
-    "posttest": "npm run lint"
+    "posttest": "npm run lint",
+    "release": "semantic-release"
   },
   "dependencies": {
     "global": "^4.3.0",
@@ -33,8 +34,12 @@
   "devDependencies": {
     "@kenan/eslint-config": "^8.0.0",
     "@kenan/renovate-config": "1.1.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "browserify": "16.5.1",
+    "conventional-changelog-conventionalcommits": "^4.3.0",
     "eslint": "^7.6.0",
+    "semantic-release": "^17.1.1",
     "tape": "5.0.1",
     "tape-run": "^8.0.0"
   }
