--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@kenan/renovate-config": "^1.4.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
-    "browserify": "16.5.1",
+    "browserify": "^16.5.2",
     "conventional-changelog-conventionalcommits": "^4.3.0",
     "eslint": "^7.6.0",
     "semantic-release": "^17.1.1",
