--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,15 +8,14 @@ jobs:
     name: release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.3
-      - name: Node.js
-        uses: actions/setup-node@v2.1.2
+      - uses: actions/setup-node@v2.1.2
         with:
-          node-version: 12
+          node-version: 14
       - name: Update npm
         run: |
           npm install -g npm
           npm --version
+      - uses: actions/checkout@v2.3.3
       - name: Install dependencies
         uses: bahmutov/npm-install@v1.4.4
         with:
