chore(ci): update actions/checkout action to v2.4.0
Closes https://github.com/KenanY/create-event/pull/133

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "repository": "KenanY/create-event",
   "license": "MIT",
-  "author": "Kenan Yildirim <kenan@kenany.me> (http://kenany.me/)",
+  "author": "Kenan Yildirim <kenan@kenany.me> (https://kenany.me/)",
   "main": "index.js",
   "files": [
     "index.js",
