--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,19 +5,20 @@ on:
       - master
 jobs:
   release:
+    timeout-minutes: 10
     name: release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v3.5.1
         with:
-          node-version: 16
+          node-version: 18
       - name: Update npm
         run: |
           npm install -g npm
           npm --version
       - uses: actions/checkout@v3.2.0
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1.8.25
+        uses: bahmutov/npm-install@v1.8.28
         with:
           useLockFile: false
       - name: Release
