--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,4 +18,9 @@ jobs:
       with:
         useLockFile: false
     - run: npm ls
-    - run: xvfb-run -a npm test
+    - name: Test
+      uses: nick-fields/retry@v2.8.3
+      with:
+        timeout_seconds: 30
+        max_attempts: 3
+        command: xvfb-run -a npm test
