--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dispatch",
     "event"
   ],
-  "repository": "KenanY/create-event",
+  "repository": "github:kenany/create-event",
   "license": "MIT",
   "author": "Kenan Yildirim <kenan@kenany.me> (https://kenany.me/)",
   "main": "index.js",
@@ -32,14 +32,14 @@
     "lodash.isstring": "^4.0.1"
   },
   "devDependencies": {
-    "@kenan/eslint-config": "^10.0.2",
+    "@kenan/eslint-config": "^11.0.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "browserify": "^17.0.0",
     "conventional-changelog-conventionalcommits": "^7.0.2",
-    "eslint": "^8.49.0",
-    "semantic-release": "^22.0.0",
-    "tape": "^5.6.6",
-    "tape-run": "^10.0.0"
+    "eslint": "^8.50.0",
+    "semantic-release": "^22.0.5",
+    "tape": "^5.7.0",
+    "tape-run": "^11.0.0"
   }
 }
