--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,7 @@ permissions:
 jobs:
   build:
     timeout-minutes: 10
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/setup-node@v4.1.0
       with:
@@ -16,7 +16,7 @@ jobs:
         npm --version
     - uses: actions/checkout@v4.2.2
     - name: Install dependencies
-      uses: bahmutov/npm-install@v1.10.4
+      uses: bahmutov/npm-install@v1.10.8
       with:
         useLockFile: false
     - run: npm ls
