fix: switch to biome

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  test:
     timeout-minutes: 10
     runs-on: ubuntu-24.04
     steps:
@@ -44,3 +44,24 @@ jobs:
           timeout_seconds: 30
           max_attempts: 3
           command: xvfb-run -a npm test
+
+  lint:
+    timeout-minutes: 10
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+
+      - run: corepack enable
+
+      - name: Setup Node.js
+        uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238 # v6.2.0
+        with:
+          node-version: 24.11.0
+          cache: pnpm
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Lint
+        run: pnpm lint
