--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "test": "test"
   },
   "scripts": {
-    "lint": "eslint *.js test/*.js",
+    "lint": "biome check .",
     "test": "browserify test/*.js | tape-run",
-    "posttest": "npm run lint",
     "release": "semantic-release"
   },
   "dependencies": {
@@ -35,11 +34,11 @@
     "lodash.isstring": "^4.0.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.4.0",
     "@containerbase/semantic-release-pnpm": "1.3.21",
-    "@kenan/eslint-config": "11.1.16",
+    "@kenan/biome-config": "1.0.6",
     "browserify": "17.0.1",
     "conventional-changelog-conventionalcommits": "9.1.0",
-    "eslint": "8.57.1",
     "semantic-release": "25.0.3",
     "tape": "5.9.0",
     "tape-run": "11.0.0"
